--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="560.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -13,7 +21,7 @@
         </font>
     </Label>
     <HBox layoutX="194.0" layoutY="46.0" prefHeight="25.0" prefWidth="248.0">
-        <RadioButton fx:id="InHouseRadioButton" alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="20.0" prefWidth="107.0" text=" In-House">
+        <RadioButton fx:id="InHouseRadioButton" alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onAction="#InHouseHandler" prefHeight="20.0" prefWidth="107.0" text=" In-House">
             <font>
                 <Font size="14.0" />
             </font>
@@ -24,7 +32,7 @@
                 <ToggleGroup fx:id="RadioButton" />
             </toggleGroup>
         </RadioButton>
-        <RadioButton fx:id="OutsourcedRadioButton" mnemonicParsing="false" prefHeight="20.0" prefWidth="122.0" text=" Outsourced" toggleGroup="$RadioButton">
+        <RadioButton fx:id="OutsourcedRadioButton" mnemonicParsing="false" onAction="#OutsourcedHandler" prefHeight="20.0" prefWidth="122.0" text=" Outsourced" toggleGroup="$RadioButton">
             <font>
                 <Font size="14.0" />
             </font>
@@ -69,12 +77,12 @@
         <TextField fx:id="MaxAddPartText" prefHeight="25.0" prefWidth="122.0" GridPane.columnIndex="1" />
         <TextField fx:id="MinAddPartText" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="3" />
     </GridPane>
-    <Button fx:id="CancelButton" layoutX="461.0" layoutY="481.0" mnemonicParsing="false" prefWidth="80.0" text="Cancel">
+    <Button fx:id="CancelButton" layoutX="461.0" layoutY="481.0" mnemonicParsing="false" onAction="#cancelPart" prefWidth="80.0" text="Cancel">
         <font>
             <Font size="16.0" />
         </font>
     </Button>
-    <Button fx:id="SaveButton" layoutX="362.0" layoutY="481.0" mnemonicParsing="false" prefWidth="80.0" text="Save">
+    <Button fx:id="SaveButton" layoutX="362.0" layoutY="481.0" mnemonicParsing="false" onAction="#savePart" prefWidth="80.0" text="Save">
         <font>
             <Font size="16.0" />
         </font>
