--- a/src/view/ModifyPart.fxml
+++ b/src/view/ModifyPart.fxml
@@ -13,7 +13,7 @@
         </font>
     </Label>
     <HBox layoutX="194.0" layoutY="46.0" prefHeight="25.0" prefWidth="248.0">
-        <RadioButton fx:id="InHouseRadioButton" alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="20.0" prefWidth="107.0" text=" In-House">
+        <RadioButton fx:id="InHouseRadioButton" alignment="CENTER_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onAction="#InHouseHandler" prefHeight="20.0" prefWidth="107.0" text=" In-House">
             <font>
                 <Font size="14.0" />
             </font>
@@ -24,7 +24,7 @@
                 <ToggleGroup fx:id="RadioButton" />
             </toggleGroup>
         </RadioButton>
-        <RadioButton fx:id="OutsourcedRadioButton" mnemonicParsing="false" prefHeight="20.0" prefWidth="122.0" text=" Outsourced" toggleGroup="$RadioButton">
+        <RadioButton fx:id="OutsourcedRadioButton" mnemonicParsing="false" onAction="#OutsourcedHandler" prefHeight="20.0" prefWidth="122.0" text=" Outsourced" toggleGroup="$RadioButton">
             <font>
                 <Font size="14.0" />
             </font>
@@ -69,12 +69,12 @@
         <TextField fx:id="MaxModifyPartText" prefHeight="25.0" prefWidth="122.0" GridPane.columnIndex="1" />
         <TextField fx:id="MinModifyPartText" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="3" />
     </GridPane>
-    <Button fx:id="CancelButton" layoutX="461.0" layoutY="481.0" mnemonicParsing="false" prefWidth="80.0" text="Cancel">
+    <Button fx:id="CancelButton" layoutX="461.0" layoutY="481.0" mnemonicParsing="false" onAction="#cancelPart" prefWidth="80.0" text="Cancel">
         <font>
             <Font size="16.0" />
         </font>
     </Button>
-    <Button fx:id="SaveButton" layoutX="362.0" layoutY="481.0" mnemonicParsing="false" prefWidth="80.0" text="Save">
+    <Button fx:id="SaveButton" layoutX="362.0" layoutY="481.0" mnemonicParsing="false" onAction="#savePart" prefWidth="80.0" text="Save">
         <font>
             <Font size="16.0" />
         </font>
@@ -91,4 +91,3 @@
         <TextField fx:id="IDModifyPartText1" editable="false" prefHeight="25.0" prefWidth="124.0" GridPane.columnIndex="1" />
     </GridPane>
 </AnchorPane>
-
