--- a/src/view/AddProduct.fxml
+++ b/src/view/AddProduct.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="638.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -33,7 +41,7 @@
         <TextField fx:id="PriceCostAddProductText" prefHeight="25.0" prefWidth="130.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <TextField fx:id="IDAddProductText" disable="true" editable="false" prefHeight="25.0" prefWidth="117.0" text="Auto Gen- Disabled" GridPane.columnIndex="1" />
     </GridPane>
-    <TextField fx:id="SearchPartText" layoutX="692.0" layoutY="46.0" prefHeight="25.0" prefWidth="173.0" text="Search by Part ID or Name" />
+    <TextField fx:id="SearchPartText" layoutX="636.0" layoutY="46.0" prefHeight="25.0" prefWidth="173.0" text="Search by Part ID or Name" />
     <GridPane layoutX="42.0" layoutY="370.0" prefHeight="63.0" prefWidth="304.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="58.0" />
@@ -53,12 +61,12 @@
         <TextField fx:id="MaxAddProductText" prefHeight="25.0" prefWidth="104.0" GridPane.columnIndex="1" />
         <TextField fx:id="MinAddProductText" prefHeight="25.0" prefWidth="100.0" GridPane.columnIndex="3" />
     </GridPane>
-    <Button fx:id="CancelButton" layoutX="769.0" layoutY="575.0" mnemonicParsing="false" prefWidth="80.0" text="Cancel">
+    <Button fx:id="AddProductCancelButton" layoutX="769.0" layoutY="575.0" mnemonicParsing="false" onMouseClicked="#cancelView" prefWidth="80.0" text="Cancel">
         <font>
             <Font size="16.0" />
         </font>
     </Button>
-    <Button fx:id="SaveButton" layoutX="665.0" layoutY="575.0" mnemonicParsing="false" prefWidth="80.0" text="Save">
+    <Button fx:id="AddProductSaveButton" layoutX="665.0" layoutY="575.0" mnemonicParsing="false" onMouseClicked="#saveProduct" prefWidth="80.0" text="Save">
         <font>
             <Font size="16.0" />
         </font>
@@ -85,20 +93,21 @@
     </GridPane>
         <TableView fx:id="AssociatedPartsTable" layoutX="430.0" layoutY="340.0" prefHeight="180.0" prefWidth="450.0">
             <columns>
-                <TableColumn fx:id="PartID" prefWidth="100.0" text="Part ID" />
-                <TableColumn fx:id="PartName" prefWidth="100.0" text="Part Name" />
-                <TableColumn fx:id="PartInventoryLevel" prefWidth="100.0" text="Inventory Level" />
-                <TableColumn fx:id="PricePerUnit" prefWidth="150.0" text="Price/Cost per Unit" />
+                <TableColumn fx:id="removePartID" prefWidth="100.0" text="Part ID" />
+                <TableColumn fx:id="removePartName" prefWidth="100.0" text="Part Name" />
+                <TableColumn fx:id="removeInventoryLevel" prefWidth="100.0" text="Inventory Level" />
+                <TableColumn fx:id="removePricePerUnit" prefWidth="150.0" text="Price/Cost per Unit" />
             </columns>
         </TableView>
-   <Button fx:id="RemovePart" layoutX="655.0" layoutY="531.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="194.0" text="Remove Associated Part">
+   <Button fx:id="removeAssociatedPartButton" layoutX="655.0" layoutY="531.0" mnemonicParsing="false" onMouseClicked="#removePart" prefHeight="25.0" prefWidth="194.0" text="Remove Associated Part">
       <font>
          <Font size="16.0" />
       </font>
    </Button>
-   <Button fx:id="SaveButton1" layoutX="769.0" layoutY="288.0" mnemonicParsing="false" prefWidth="80.0" text="Add">
+   <Button fx:id="partChoicesAddButton" layoutX="769.0" layoutY="288.0" mnemonicParsing="false" onMouseClicked="#addPart" prefWidth="80.0" text="Add">
       <font>
          <Font size="16.0" />
       </font>
    </Button>
+   <Button fx:id="AddProductSearchButton" layoutX="809.0" layoutY="46.0" mnemonicParsing="false" onMouseClicked="#lookupPart" prefHeight="11.0" prefWidth="68.0" text="Search" />
     </AnchorPane>
