--- a/src/view/AddPart.fxml
+++ b/src/view/AddPart.fxml
@@ -88,6 +88,6 @@
             <RowConstraints minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <Label fx:id="DynamicAddPartLabel" text="Machine Id" />
-        <TextField fx:id="DynamicAddPartText" editable="false" prefHeight="25.0" prefWidth="124.0" GridPane.columnIndex="1" />
+        <TextField fx:id="DynamicAddPartText" prefHeight="25.0" prefWidth="124.0" GridPane.columnIndex="1" />
     </GridPane>
 </AnchorPane>
